--- a/RAF3/raf3/css/raf2.css
+++ b/RAF3/raf3/css/raf2.css
@@ -32,10 +32,10 @@ main {
 .send {
   display: none;
   text-align: center;
-  background-color: aliceblue;
-  opacity: 0.8;
+  background-color: #a2cef5;
+  opacity: 0.90;
   position: absolute;
-  margin: 20%;
+  padding: 10%;
   z-index: 3; }
 
 .mini {
@@ -72,11 +72,27 @@ ul {
   top: 150px;
   z-index: 1; }
 
+#file {
+  margin: 3%; }
+
+#upld {
+  background-color: #3ee73e; }
+
+#cancel {
+  background-color: #e96d6d; }
+
 @media screen and (max-width: 780px) {
   body, html {
     background-image: url("../img/fdefnf.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed; } }
+    background-attachment: fixed; }
+
+  .send {
+    padding: 10%;
+    top: 0px;
+    min-height: 100%;
+    font-size: 1.2em;
+    line-height: 2em; } }
 
 /*# sourceMappingURL=raf2.css.map */
