--- a/RAF3/raf3/css/raf2.scss
+++ b/RAF3/raf3/css/raf2.scss
@@ -111,7 +111,7 @@ ul{
 	.send{
 		padding: 3%;
 		top: 0px;
-		min-height: 100%;
+		max-height: 100%;
 		font-size: 1.2em;
 		line-height: 2em;
 	}
