--- a/RAF3/raf3/css/raf2.css
+++ b/RAF3/raf3/css/raf2.css
@@ -95,7 +95,7 @@ ul {
   .send {
     padding: 3%;
     top: 0px;
-    height: 100%;
+    min-height: 100%;
     font-size: 1.2em;
     line-height: 2em; } }
 
