--- a/RAF3/raf3/css/raf2.scss
+++ b/RAF3/raf3/css/raf2.scss
@@ -73,7 +73,11 @@ img{
 .picnav{
 	margin: 8%;
 	width: 70%;
-	height: 10%
+	height: 10%;
+	&:hover{
+		cursor: pointer;
+	}
+
 }
 ul{
   list-style: none;
@@ -98,6 +102,67 @@ ul{
 	background-color: rgb(236, 176, 121);
 	border-radius: 10px;
 	width: 50%;
+}
+
+//==============SWTCH
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 //=================== MEDIA
 
